--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-size: 17px;
-  background-color: #121212;
+  background-color: #0D1B2A;
   color: #eee;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
